--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: php
 
 php:
-  - 5.2
   - 5.3
   - 5.4
   - 5.5
@@ -12,6 +11,6 @@ env:
   - AUTOLOAD=1
   - AUTOLOAD=0
 
-before_script: composer install -n --dev --prefer-source
+before_script: composer update
 
 after_script: ./vendor/bin/coveralls -v
